--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ shipments=${base-url}/shipment-products?orderNumber=%s
 pricing=${base-url}/pricing?countryCode=%s
 track=${base-url}/track-status?orderNumber=%s
 server.port=8080
+spring.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/META-INF/resources/webjars/
